# SajuAI

./: .env  README.md  manse_api.py  pyproject.toml
base_data/: cheongan.py  ganji.py  jiji.py  twelve_life.py
utils/: utils.py
